--- a/client/app.html
+++ b/client/app.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>ANL Printer</title>
+    <link rel="icon" href="main.ico" />
   </head>
   <body>
     <h1>Welcome!</h1>
